--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,32 @@
+html {    
+       
+    background-size: cover;
+}
+
 #imageBanner {
     position: relative;
     display: flex;
     left: -10px;
     top: -10px;
-    width: 80vh;
-    height: auto;
+    width: auto;
+    height: 100vh;
     border: 2px solid black;
 }
 
 #bkContainer {
-    width: 100%;
-    height: auto;
+    
     position: relative;
     
 }
 
 #bkgImg {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100vh;
     z-index: -1;
+    opacity: 0.7;
 }
 
 #logoContainer {
     position: absolute;
 }
+
