--- a/styles.css
+++ b/styles.css
@@ -8,25 +8,37 @@ html {
     display: flex;
     left: -10px;
     top: -10px;
-    width: auto;
+    width: clamp(400px, 35vw, 45vw);;
     height: 100vh;
-    border: 2px solid black;
+    border: 3px solid red;
 }
 
 #bkContainer {
     
-    position: relative;
+    position: absolute;
+    display: flex;
+    height: 100vh;
     
 }
 
 #bkgImg {
-    width: auto;
+    width: 100%;
     height: 100vh;
     z-index: -1;
-    opacity: 0.7;
+    opacity: 0.9;
+    position: absolute;
+
 }
 
 #logoContainer {
-    position: absolute;
+    position: relative;
+    top: 8rem;
+    width: 100.5%;
+    z-index: -1;
+    background-color: rgba(101, 99, 128, 0.63);
 }
 
+#logo {
+    width: 40%;
+    
+}
