--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 html {    
-       
+    background-color: rgba(30, 30, 36, 0.75);
+  
     background-size: cover;
+}
+
+body {
+    display: flex;
 }
 
 #imageBanner {
@@ -10,7 +15,7 @@ html {
     top: -10px;
     width: clamp(400px, 35vw, 45vw);;
     height: 100vh;
-    border: 3px solid red;
+    
 }
 
 #bkContainer {
@@ -41,4 +46,25 @@ html {
 #logo {
     width: 40%;
     
+}
+
+#formContainer {
+    border: 3px solid red;
+    top: 0;
+    width: 65%;
+    
+    margin: -0.5rem;
+    
+}
+
+#inputContainer {
+    display: flex;
+    border: 2px solid yellow;
+    
+}
+
+#inputSection {
+    border: 2px solid blue;
+    background-color: rgba(30, 30, 36, 1);
+
 }
