--- a/styles.css
+++ b/styles.css
@@ -13,38 +13,45 @@ body {
     display: flex;
     left: -10px;
     top: -10px;
-    width: clamp(400px, 35vw, 45vw);;
+    width: clamp(400px, 43vw, 55vw);;
     height: 100vh;
-    
+    border: 2px solid blue;
 }
 
-#bkContainer {
+#bkgContainer {
     
-    position: absolute;
-    display: flex;
-    height: 100vh;
-    
+    /* position: absolute; */
+    /* background-color: aqua; */
+    /* display: flex; */
+    height: 100%;
+    width: clamp(400px, 43vw, 55vw);;
+    border: 2px solid red;
+    /* z-index: 2; */
 }
 
 #bkgImg {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: -1;
-    opacity: 0.9;
+    opacity: 0.82;
     position: absolute;
 
 }
 
 #logoContainer {
     position: relative;
+    
     top: 8rem;
-    width: 100.5%;
+    width: 100%;
+    height: clamp(60px, 12vw, 22vw);;
     z-index: -1;
     background-color: rgba(101, 99, 128, 0.63);
+    border: 3px solid pink;
 }
 
 #logo {
-    width: 40%;
+    height: clamp(60px, 12vw, 22vw);;
+
     
 }
 
@@ -52,7 +59,7 @@ body {
     border: 3px solid red;
     top: 0;
     width: 65%;
-    
+    height: 100vh;
     margin: -0.5rem;
     
 }
@@ -65,6 +72,49 @@ body {
 
 #inputSection {
     border: 2px solid blue;
-    background-color: rgba(30, 30, 36, 1);
-
+    background-color: rgba(30, 30, 36, .85);
+    color: white;
 }
+
+@media only screen and (max-width: 700px) {
+    /* #imageBanner {
+        width: 0%;
+    }
+
+    #bkgContainer {
+        width: 0%;
+    } */
+
+    body {
+        display: block;
+    }
+
+    #bkgImg {
+        visibility: hidden;
+        height: 60px;
+        width: 100%;
+
+    }
+
+    #imageBanner {
+        height: 60px;
+        width: 100%;
+
+    }
+    
+    #bkgContainer {
+        height: 60px;
+        width: 100%;
+    }
+
+    #logoContainer {
+        position: relative;
+        
+        top: 0;
+        width: 100%;
+        height: clamp(60px, 12vw, 22vw);;
+        background-color: rgba(101, 99, 128, 0.63);
+        border: 3px solid pink;
+    }
+}
+
