--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ body {
 
 #formHeading {
     color: yellow;
-    padding: 3.5rem 2rem;
+    padding: 2rem 2rem;
     font-size: 1.15rem;
 }
 
@@ -96,10 +96,11 @@ body {
     color: yellow;
     font-weight: 1000;
     padding-left: 2rem;
+    padding-bottom: 0;
 }
 
 .formRow {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -109,6 +110,7 @@ body {
 .formColumns {
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 0;
 }
 
 .formRow input[type='text'],
@@ -123,8 +125,17 @@ body {
 }
 
 .formRow label {
-    margin-bottom: 7px;
+    margin-bottom: 1px;
   }
+
+#buttonSection {
+    position: relative;
+}
+
+#buttonContainer {
+    position: relative;
+    padding: 2rem;
+}
 
 @media only screen and (max-width: 700px) {
     /* #imageBanner {
