--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     left: -10px;
     top: -10px;
-    width: clamp(400px, 43vw, 55vw);;
+    width: clamp(400px, 43vw, 55vw);
     height: 100vh;
     border: 2px solid blue;
 }
@@ -30,7 +30,7 @@ body {
     /* background-color: aqua; */
     /* display: flex; */
     height: 100%;
-    width: clamp(400px, 43vw, 55vw);;
+    width: clamp(400px, 43vw, 55vw);
     border: 2px solid red;
     /* z-index: 2; */
 }
@@ -49,14 +49,14 @@ body {
     
     top: 8rem;
     width: 100%;
-    height: clamp(60px, 12vw, 22vw);;
+    height: clamp(60px, 12vw, 22vw);
     z-index: -1;
     background-color: rgba(101, 99, 128, 0.63);
     border: 3px solid pink;
 }
 
 #logo {
-    height: clamp(60px, 12vw, 22vw);;
+    height: clamp(60px, 12vw, 22vw);
 
     
 }
@@ -73,7 +73,7 @@ body {
 #formHeading {
     color: yellow;
     padding: 2rem 2rem;
-    font-size: 1.15rem;
+    font-size: clamp(10px, 1vw, 1.15rem);
 }
 
 #inputContainer {
@@ -119,7 +119,7 @@ body {
     background-color: #FFFFFF;
     border: 1px solid #D6D9DC;
     border-radius: 3px;
-    width: 25rem;
+    width: 20vw;
     padding: 7px;
     font-size: 14px;
 }
