Get rid of extra bottom space

--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,21 @@
     font-family: 'Changa', sans-serif;
     font-weight: 1000;
     color: yellow;
+    height: 100vh;
+     
 }
 
 html {    
     background-color: rgba(30, 30, 36, 0.75);
-    
+    height: 90vh;
+  
     
     
 }
 
 body {
     display: flex;
-    
+    height: 98vh;
     
 }
 
@@ -106,7 +109,7 @@ body {
     background-color: rgba(30, 30, 36, .85);
     color: white;
     position: relative;
-    left: -2px;
+    left: 0px;
 }
 
 #inputSection h3 {
